--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemone index.js"
+    "start": "node index.js",
+    "dev": "nodemone index.js"
   },
   "type": "module",
   "author": "Bobokhuja <bobokhuja@yandex.ru>",
@@ -13,6 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mysql": "github:mysqljs/mysql",
     "node-localstorage": "^2.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
